[package]
name = "list2choice"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#cursive = "0.18.0"
static_init = "1.0.2"

[dependencies.cursive]
version = "0.18.0"
default-features = false
features = ["termion-backend"]
